--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="third_slide">Good Service</string>
 
     <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile">Profile</string>
+    <string name="menu">Menu</string>
+    <string name="home">Home</string>
+    <string name="your_profile">Your Profile</string>
+    <string name="menulist">MenuList</string>
 </resources>
