Added Item Details section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="second_slide">Fast Delivery</string>
     <string name="third_slide">Good Service</string>
 
-    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
+    <string name="description">Enjoy reliable and friendly customer service. We ensure a seamless shopping experience from order to delivery.</string>
+    <string name="description2">Receive your orders quickly with our efficient delivery service. We prioritize speed to get your items to you fast.</string>
+    <string name="description3">Easily browse and select from a wide range of products. Our user-friendly interface makes shopping simple and enjoyable.</string>
 </resources>
