--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">E Commerce Application</string>
+    <string name="app_name">New E Commerce Application</string>
 
     <string name="first_slide">Choose Your Products</string>
     <string name="second_slide">Fast Delivery</string>
