--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
         <item>Clothing</item>
         <item>Footwear</item>
         <item>Shoes</item>
+        <item>Headset</item>
         <item>Groceries</item>
         <item>Beauty Products</item>
         <item>Electronics</item>
@@ -16,6 +17,7 @@
         <item>Kids Footwear</item>
         <item>Phones</item>
         <item>Laptop</item>
+        <item>Books</item>
         <item>Electronic Accessories</item>
         <item>Makeup Products</item>
         <item>Fruits</item>
@@ -24,10 +26,18 @@
         <item>Cereals</item>
         <item>Grains</item>
         <item>Pulses</item>
-        <item>Home Appliances</item>
-        <item>Decoration Items</item>
-        <item>Kitchen Appliances</item>
         <item>Chargers</item>
+        <item>Tabs</item>
+        <item>Air Fryer</item>
+        <item>Bed</item>
+        <item>Pan</item>
+        <item>Spatula</item>
+        <item>Refridgerator</item>
+        <item>Washing Machine</item>
+        <item>Television</item>
+        <item>Gas Stove</item>
+        <item>Sofa</item>
+        <item>Cooker</item>
         <item>Earphones</item>
     </string-array>
     <string name="app_name">New E Commerce Application</string>
