Added items of Books and Medicine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,9 +28,14 @@
         <item>Pulses</item>
         <item>Chargers</item>
         <item>Tabs</item>
+        <item>Medical Solutions</item>
+        <item>Medical Pills</item>
         <item>Air Fryer</item>
         <item>Bed</item>
+        <item>Romance Books</item>
+        <item>Kids Books</item>
         <item>Pan</item>
+        <item>Bandages</item>
         <item>Spatula</item>
         <item>Refridgerator</item>
         <item>Washing Machine</item>
