Added items of Books and Medicine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,9 @@
         <item>Medical Pills</item>
         <item>Air Fryer</item>
         <item>Bed</item>
+        <item>Brush</item>
+        <item>Compact</item>
+        <item>Consealer</item>
         <item>Romance Books</item>
         <item>Kids Books</item>
         <item>Pan</item>
