Added items of Books and Medicine

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,18 @@
         <item>Medical Pills</item>
         <item>Air Fryer</item>
         <item>Bed</item>
+        <item>Kids Clothing</item>
+        <item>Kids Footwear</item>
+        <item>Men\'s Clothing</item>
+        <item>Men\'s Footwear</item>
+        <item>Maskara</item>
+        <item>Lipstick</item>
+        <item>Highlighter</item>
+        <item>Foundation</item>
+        <item>Eyeliner</item>
+        <item>Eye Shadow</item>
+        <item>Contour</item>
+        <item>Science Fiction Books</item>
         <item>Brush</item>
         <item>Compact</item>
         <item>Consealer</item>
